--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "function-plot": "^1.22.8",
+    "mathjs": "^10.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-latex": "^2.0.0",
+    "react-mathquill": "^1.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
