--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cortex-js/compute-engine": "^0.4.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -11,14 +12,20 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.25.0",
+    "better-react-mathjax": "^1.0.3",
+    "evaluatex": "^2.2.0",
     "function-plot": "^1.22.8",
-    "mathjs": "^10.1.0",
+    "mathjs": "^10.4.0",
+    "mathlive": "^0.69.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-latex": "^2.0.0",
+    "react-mathlive": "^3.0.5-preview.1",
     "react-mathquill": "^1.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.9",
+    "tex-math-parser": "^2.0.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.0"
   },
