--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.25.0",
     "better-react-mathjax": "^1.0.3",
+    "desmos": "^1.5.4",
     "evaluatex": "^2.2.0",
     "function-plot": "^1.22.8",
     "mathjs": "^10.4.0",
