--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@cortex-js/compute-engine": "^0.4.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.6.0",
+    "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.6.1",
+    "@mui/x-data-grid": "^5.10.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -19,6 +22,7 @@
     "desmos": "^1.5.4",
     "evaluatex": "^2.2.0",
     "function-plot": "^1.22.8",
+    "katex": "^0.15.3",
     "mathjs": "^10.4.0",
     "mathlive": "^0.69.11",
     "react": "^17.0.2",
@@ -57,5 +61,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   }
 }
