--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,17 +1,26 @@
 name: CI
 on: [push]
 jobs:
-  build:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: install # will run yarn install command
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: build # will run yarn build command
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: test # will run yarn test command
+    install-and-test:
+      runs-on: ubuntu-latest
+
+      strategy:
+        matrix:
+          node-version: [8.x, 10.x, 12.x]
+
+      steps:
+        - uses: actions/checkout@master
+
+        - name: Set up Node.js ${{ matrix.node-version }}
+          uses: actions/setup-node@master
+          with:
+            node-version: ${{ matrix.node-version }}
+
+        - name: Install packages
+          run: yarn install --frozen-lockfile
+
+        - name: Test
+          run: yarn test
+
+          env:
+            CI: true
