--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@mui/x-data-grid": "^5.10.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.25.0",
-    "better-react-mathjax": "^1.0.3",
+    "better-react-mathjax": "^2.0.1",
     "ci": "^2.2.0",
     "desmos": "^1.5.4",
     "evaluatex": "^2.2.0",
@@ -64,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
