--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,8 @@ jobs:
 
         - name: Install packages
           run: yarn install --frozen-lockfile
+          - name: Test
+          run: yarn test
 
           env:
             CI: true
