--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,10 @@ jobs:
 
         - name: Install packages
           run: yarn install --frozen-lockfile
-
+          
+          - name: Test
+          run: yarn test
+    
           env:
             CI: true
             
@@ -31,7 +34,7 @@ jobs:
             username: ${{ secrets.DOCKER_HUB_USERNAME }}
             password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
           
-        - name: Set up Docker Build
+        - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v1
           
         - name: Build and push
