--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,4 +43,4 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
-            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/numerical_react:latest
+            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/client:latest
