--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,20 +45,21 @@ jobs:
             push: true
             tags: ${{ secrets.DOCKER_HUB_USERNAME }}/client:latest
 
-        - name: Deploy
-          needs: build
-          runs-on: ubuntu-latest
-          steps:
-        - name: Download artifact
-          uses: actions/download-artifact@v2
-          with:
-            name: production
-            path: ./build
-              
-        - name: Deploy to Github pages
-          uses: warat09/ghaction-github-pages@v2
-          with:
-            target_branch: numerpage
-            build_dir: ./build
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: production
+        path: ./build
+        
+    - name: Deploy to Github pages
+      uses: crazy-max/ghaction-github-pages@v2
+      with:
+        target_branch: numerpage
+        build_dir: ./build
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
