--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,21 +25,28 @@ jobs:
           env:
             CI: true
             
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: production
-        path: ./build
-        
-    - name: Deploy to Github pages
-      uses: crazy-max/ghaction-github-pages@v2
-      with:
-        target_branch: numerpage
-        build_dir: ./build
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        - name: Checkout 
+          uses: actions/checkout@v2
+          
+        - name: Login to Docker Hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKER_HUB_USERNAME }}
+            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v1
+          
+        - name: Build and push
+          uses: docker/build-push-action@v2
+          with:
+            context: .
+            file: ./Dockerfile
+            push: true
+            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/client:latest
+
+        - name: Deploy 🚀
+          uses: JamesIves/github-pages-deploy-action@v4.3.3
+          with:
+            branch: numerpage # The branch the action should deploy to.
+            folder: build # The folder the action should deploy.
