--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,3 +24,29 @@ jobs:
     
           env:
             CI: true
+            
+        - name: Checkout 
+          uses: actions/checkout@v2
+          
+        - name: Login to Docker Hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKER_HUB_USERNAME }}
+            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v1
+          
+        - name: Build and push
+          uses: docker/build-push-action@v2
+          with:
+            context: .
+            file: ./Dockerfile
+            push: true
+            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/client:latest
+
+        - name: Deploy 🚀
+          uses: JamesIves/github-pages-deploy-action@v4.3.3
+          with:
+            branch: numerpage # The branch the action should deploy to.
+            folder: build # The folder the action should deploy.
