--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,8 +45,9 @@ jobs:
             push: true
             tags: ${{ secrets.DOCKER_HUB_USERNAME }}/client:latest
 
-        - name: Deploy 🚀
-          uses: JamesIves/github-pages-deploy-action@v4.3.3
-          with:
-            branch: numerpage # The branch the action should deploy to.
-            folder: build # The folder the action should deploy.
+        - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.ref == 'refs/heads/numerpage' }}
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./out
