--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-app",
+  "name": "ProjectNumericalMethods",
+  "homepage":"https://warat09.github.io/ProjectNumericalMethods",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -40,6 +41,8 @@
     "yarn": "^1.22.18"
   },
   "scripts": {
+    "predeploy":"yarn run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -66,6 +69,7 @@
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
     "autoprefixer": "^10.4.5",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
   }
