--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,11 @@ permissions:
 jobs:
   build-and-deploy:
     concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  
+    
+    strategy:
+       matrix:
+            node-version: [17.x]
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
