--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "ProjectNumericalMethods",
-  "homepage":"https://warat09.github.io/ProjectNumericalMethods",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,10 +40,10 @@
     "yarn": "^1.22.18"
   },
   "scripts": {
-    "predeploy":"yarn run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -72,18 +71,5 @@
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
-  },
-  "gh-pages-deploy": {
-    "staticpath": "dist",
-    "cname": "nope.org",
-    "prep": [
-      "build-sass",
-      "optimize-img"
-    ],
-    "commit": "a custom commit message",
-    "post": [
-      "clean-source"
-    ],
-    "noprompt": false
   }
 }
