--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ProjectNumericalMethods",
+  "homepage": "https://warat09.github.io/ProjectNumericalMethods",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
