--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,7 @@
 name: CI
 on: [push]
 jobs:
+  job1:
     install-and-test:
       runs-on: ubuntu-latest
 
@@ -24,6 +25,29 @@ jobs:
     
           env:
             CI: true
+  job2:
+    need: job1
+      build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
+    runs-on: ubuntu-latest  
+    
+    strategy:
+       matrix:
+            node-version: [17.x]
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: yarn install && yarn add react-scripts && yarn run build
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.3.3
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
+
+        
         # - name: Checkout 
         #   uses: actions/checkout@v2
           
