--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,13 @@
 #        matrix:
 #             node-version: [17.x]
 #     steps:
-#       - name: Checkout 
+#       - name: Checkout 🛎️
 #         uses: actions/checkout@v3
 
-#       - name: Install and Build  # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+#       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
 #         run: yarn install && yarn add react-scripts && yarn run build
 
-#       - name: Deploy 
+#       - name: Deploy 🚀
 #         uses: JamesIves/github-pages-deploy-action@v4.3.3
 #         with:
 #           branch: gh-pages # The branch the action should deploy to.
