--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,7 +3,6 @@ on: [push]
 permissions: 
   contents: write
 jobs:
-    job1:
       install-and-test:
         runs-on: ubuntu-latest
 
@@ -27,16 +26,11 @@ jobs:
       
             env:
               CI: true
-
-      job2:
-        build-and-deploy:
-        needs: job1
+              
+      build-and-deploy:
+        needs: install-and-test
         concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
         runs-on: ubuntu-latest  
-        
-        strategy:
-          matrix:
-                node-version: [17.x]
         steps:
           - name: Checkout 🛎️
             uses: actions/checkout@v3
