--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,71 +1,27 @@
-name: CI
-on: [push]
+name: Build and Deploy
+on:
+  push:
+    branches:
+      - master
 permissions: 
   contents: write
 jobs:
-    job1:
-      install-and-test:
-        runs-on: ubuntu-latest
-
-        strategy:
-          matrix:
+  build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
+    runs-on: ubuntu-latest  
+    
+    strategy:
+       matrix:
             node-version: [17.x]
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
 
-        steps:
-          - uses: actions/checkout@master
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: yarn install && yarn add react-scripts && yarn run build
 
-          - name: Set up Node.js ${{ matrix.node-version }}
-            uses: actions/setup-node@master
-            with:
-              node-version: ${{ matrix.node-version }}
-
-          - name: Install packages
-            run: yarn install --frozen-lockfile
-            
-          - name: Test
-            run: yarn test
-      
-            env:
-              CI: true
-
-      job2:
-        build-and-deploy:
-        needs: job1
-        concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
-        runs-on: ubuntu-latest  
-        
-        strategy:
-          matrix:
-                node-version: [17.x]
-        steps:
-          - name: Checkout 🛎️
-            uses: actions/checkout@v3
-
-          - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-            run: yarn install && yarn add react-scripts && yarn run build
-
-          - name: Deploy 🚀
-            uses: JamesIves/github-pages-deploy-action@v4.3.3
-            with:
-              branch: gh-pages # The branch the action should deploy to.
-              folder: build # The folder the action should deploy.
-        
-        # - name: Checkout 
-        #   uses: actions/checkout@v2
-          
-        # - name: Login to Docker Hub
-        #   uses: docker/login-action@v1
-        #   with:
-        #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        #     password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-          
-        # - name: Set up Docker Buildx
-        #   uses: docker/setup-buildx-action@v1
-          
-        # - name: Build and push
-        #   uses: docker/build-push-action@v2
-        #   with:
-        #     context: .
-        #     file: ./Dockerfile
-        #     push: true
-        #     tags: ${{ secrets.DOCKER_HUB_USERNAME }}/client:latest
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.3.3
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
