--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,22 +44,27 @@ jobs:
             with:
               branch: gh-pages # The branch the action should deploy to.
               folder: build # The folder the action should deploy.
-        # - name: Checkout 
-        #   uses: actions/checkout@v2
-          
-        # - name: Login to Docker Hub
-        #   uses: docker/login-action@v1
-        #   with:
-        #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        #     password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-          
-        # - name: Set up Docker Buildx
-        #   uses: docker/setup-buildx-action@v1
-          
-        # - name: Build and push
-        #   uses: docker/build-push-action@v2
-        #   with:
-        #     context: .
-        #     file: ./Dockerfile
-        #     push: true
-        #     tags: ${{ secrets.DOCKER_HUB_USERNAME }}/client:latest
+              
+      build-and-deploy-to-docker:
+            needs: install-and-test
+            runs-on: ubuntu-latest
+
+            steps:    
+                - name: Login to Docker Hub
+                  uses: docker/login-action@v1
+                  with:
+                    username: ${{ secrets.DOCKER_HUB_USERNAME }}
+                    password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+                - name: Set up Docker Buildx
+                  uses: docker/setup-buildx-action@v1
+
+                - name: Build and push
+                  uses: docker/build-push-action@v2
+                  with:
+                    context: .
+                    file: ./Dockerfile
+                    push: true
+                    tags: ${{ secrets.DOCKER_HUB_USERNAME }}/client:latest
+
+    
