--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,7 +49,10 @@ jobs:
             needs: install-and-test
             runs-on: ubuntu-latest
 
-            steps:    
+            steps:
+                - name: Checkout 
+                  uses: actions/checkout@v2
+                  
                 - name: Login to Docker Hub
                   uses: docker/login-action@v1
                   with:
