--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,6 +12,7 @@ jobs:
             node-version: [17.x]
 
         steps:
+        - uses: actions/checkout@v2
         - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
           with:
             heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
